fix scroll blink on desktop and visual nav container overflow by bottom items if dropdown is open on iPhone X horizontal

--- a/assets/css/freelancehunt.css
+++ b/assets/css/freelancehunt.css
@@ -188,7 +188,6 @@
 .nav-dropdown {
     max-width: initial;
     margin-top: 11px;
-    overflow-y: auto;
     position: absolute;
     visibility: hidden;
     opacity: 0;
@@ -338,7 +337,7 @@
         visibility: visible;
         opacity: 1;
         transform: translateY(0%);
-        max-height: 80vh;
+        max-height: 85vh;
         transition-delay: 0s;
     }
 
